# fastapi-alembic-postgres

./: .bumpversion.cfg  .gitignore  Makefile  README.md  TODO.md  alembic.ini  dbtest-compose.yml  prestart.py  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 2f61a2b01346_user_table.py  5677d9eb731b_user_table_1.py  6f0a5bde4076_initial_revision.py  9a05c3a9397d_initial.py  bc8bb2cff5fd_initial_version.py
app/: backend_pre_start.py  initial_data.py  main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: auth.py  exposed.py  user.py
app/core/: auth.py  config.py  hashing.py
app/core/settings/: app.py  base.py  development.py  production.py  test.py
app/crud/: __init__.py  base.py  crud_user.py
app/db/: base.py  base_class.py  init_db.py  models.py  session.py
app/models/: banned.py  user.py
app/routes/: api.py  covered.py  exposed.py
app/schemas/: user.py
attic/tests/: fake_async_pool.py
fap/: app.py
fapp/api/routes/: api.py  exposed.py
fapp/core/: config.py
fapp/core/settings/: app.py  base.py  development.py  production.py  test.py
otherdbs/postgres/tests/: fake_async_pool.py
tests/: conftest.py
tests/api/: test_async.py  test_error.py  test_exposed.py  test_login.py
